# clinical-trials

./: .example.env  .gitignore  DEVELOPER.md  README.md  RagTITRE.ipynb  consent.ipynb  pyproject.toml  scratchpad.ipynb  testRetrievalStrategies.ipynb
dean_utils/: defaults.py  format.py  getVectorstore.py  prompts.py  testQueries.py
experimental/: README.md
