[project]
name = "clinical-trials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.20",
    "langchain>=0.3.21",
    "langgraph>=0.3.15",
    "pypdf>=5.4.0",
    "reportlab>=4.3.1",
    "tcl>=0.2",
    "pymupdf>=1.25.4",
    "langchain-huggingface>=0.1.2",
    "langchain-qdrant>=0.2.0",
    "langchain-openai>=0.3.11",
    "langchain-ollama>=0.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
